Bug 160051 - FILESAVE PDF PAC tool reports "Artifact present inside tagged content"
Summary: FILESAVE PDF PAC tool reports "Artifact present inside tagged content"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2024-03-05 17:22 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-07 12:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (968.70 KB, application/vnd.oasis.opendocument.text)
2024-03-05 17:22 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the error in PAC 2021 (53.60 KB, image/png)
2024-03-05 17:23 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-03-05 17:22:40 UTC
Created attachment 192977 [details]
Example file from Writer

When attached document is exported as tagged PDF, the PAC tool gives an error.

1. Open attached document
2. Save as PDF with enabling the Tagged and Form Control options (PDF/UA is not needed)
3. Open the resulting file in the PAC tool
-> Artifact present inside tagged content


Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e939685f9c6918830bd3097062790bfccbce937e
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Seems to have started in 5.4 with:
https://git.libreoffice.org/core/+/37bdf1659ddb11d8706289511623cc7c8b0d264b

author	Miklos Vajna <vmiklos@collabora.co.uk>	Tue Apr 11 16:50:53 2017 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	Tue Apr 11 17:38:47 2017 +0200

Related: tdf#106972 vcl PDF import: downgrade PDF >= 1.5

But before this, the image was not exported properly, and even before that there was another PAC warning, "Referenced external object present" - so it was not really good either, only in 5.3 was there no "Content" category warning.
Comment 1 Gabor Kelemen (Collabora) 2024-03-05 17:23:51 UTC
Created attachment 192978 [details]
Screenshot of the error in PAC 2021
Comment 2 Bogaboga Man 2024-03-05 19:33:45 UTC
Online validation fails as well!
Comment 3 Gabor Kelemen (Collabora) 2024-03-06 07:58:05 UTC
First problem with "Referenced external object present" started with:

https://git.libreoffice.org/core/+/78e25558e86188314b9b72048b8ddca18697cb86

author	Miklos Vajna <vmiklos@collabora.co.uk>	Thu Feb 23 16:35:15 2017 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	Thu Feb 23 16:36:18 2017 +0100

tdf#106059 PDF export: create a reference XObject for JPG images with PDF data

Before this there was no Content-category error reported by PAC.
Comment 4 Commit Notification 2025-01-12 01:25:01 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05a075d23eb6003849e75582e12ef788e615a56d

tdf#160051 PDF export: Artifact present inside tagged content

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-07 12:04:56 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9616c85841b9a692e1dbfea470083b3b134fdc5d

tdf#160051 PDF export: Artifact present inside tagged content

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.